--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
       <artifactId>okhttp</artifactId>
       <version>4.2.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>spring-mock-mvc</artifactId>
+      <version>${rest-assured.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
